[metadata]
# replace with your username:
name = paging_mission_control_tbishop
version = 0.0.1
author = Thomas Bishop
author_email = therationalweb@gmail.com
description = This program generates JSON formatted alerts based on prescribed thresholds
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/therationalweb/paging_mission_control_tbishop.git
project_urls =
    Bug Tracker = https://github.com/pypa/paging_mission_control_tbishop/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src